--- a/mounawer/tp1/src/app/face-snap-g1/face-snap-g1.html
+++ b/mounawer/tp1/src/app/face-snap-g1/face-snap-g1.html
@@ -1,7 +1,9 @@
 <div class="face-snap-card">
-    <h2>{{title}}</h2>
-    <p>mis en ligne le{{createdate}}</p>
-    <img [src]="imageUr1" [alt]="title">
-    <p>{{description}}</p>  
-    <p>{{snaps}}</p>
+  <h2>{{ faceSnap.title }}</h2>
+  <p>Mis en ligne le {{ faceSnap.createdDate }}</p>
+  <img [src]="faceSnap.imageUrl" [alt]="faceSnap.title">
+  <p>{{ faceSnap.description }}</p>
+  
+  <button (click)="onSnap()">{{ buttonText }}</button>
+  <p>👍 {{ faceSnap.snaps }}</p>
 </div>
