--- a/mounawer/tp3/src/app/app.html
+++ b/mounawer/tp3/src/app/app.html
@@ -1,1 +1,3 @@
-<app-face-snap[faceSnap]="faceSnap"></app-face-snap>
+<app-header></app-header>
+<app-time-picker></app-time-picker>
+<app-face-snap-g1 *ngFor="let faceSnap of faceSnaps" [faceSnap]="faceSnap"></app-face-snap-g1>
