--- a/mounawer/tp1/src/app/face-snap-g1/face-snap-g1.html
+++ b/mounawer/tp1/src/app/face-snap-g1/face-snap-g1.html
@@ -1,9 +1,10 @@
-<div class="face-snap-card">
-  <h2>{{ faceSnap.title }}</h2>
-  <p>Mis en ligne le {{ faceSnap.createdDate }}</p>
-  <img [src]="faceSnap.imageUrl" [alt]="faceSnap.title">
-  <p>{{ faceSnap.description }}</p>
-  
-  <button (click)="onSnap()">{{ buttonText }}</button>
-  <p>👍 {{ faceSnap.snaps }}</p>
+<div class="face-snap-card" [ngClass]="{ snapped: buttonText === 'Oops, unSnap!' }">
+<h2>{{ faceSnap.title }}</h2>
+<p>Mis en ligne le {{ faceSnap.createdDate }}</p>
+<img [src]="faceSnap.imageUrl" [alt]="faceSnap.title">
+<p>{{ faceSnap.description }}</p>
+<p>
+<button (click)="onSnap()">{{ buttonText }}</button>
+🤌 {{ faceSnap.snaps }}
+</p>
 </div>
